wip - added content to elements

--- a/index.html
+++ b/index.html
@@ -6,8 +6,9 @@
       href="https://fonts.googleapis.com/css?family=Roboto&display=swap"
       rel="stylesheet"
     />
-    <script src="./GitHubCard/index.js" async></script>
+    <!-- axios script needs to be before your index -->
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+    <script src="./GitHubCard/index.js" async></script>
     <link rel="stylesheet" href="./index.css" />
   </head>
   <body>
